Vistas implemetadas sin consultas a BD, Navegación implementada, Color agregado

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,30 @@
-// Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
+// ======================================================
+// BRANDING - Citas Médicas Rurales
+// ======================================================
 
-// Variables
-@import 'variables';
+// Colores de la paleta
+$primary: #96A78D;    
+$secondary: #B6CEB4;   
+$accent: #D9E9CF;       
+$background: #F0F0F0;   
 
-// Bootstrap
-@import 'bootstrap/scss/bootstrap';
+// Fondo general
+$body-bg: $background;
+$body-color: #1E1E1E;
+
+// NAVBAR
+$navbar-dark-bg: $primary;
+$navbar-dark-color: #ffffff;
+$navbar-dark-hover-color: $accent;
+
+// BOTONES
+$btn-primary-bg: $primary;
+$btn-primary-border-color: $primary;
+$btn-primary-hover-bg: $secondary;
+
+// Tarjetas y formularios
+$card-bg: #FFFFFF;
+$card-border-color: $secondary;
+
+// Importación Bootstrap
+@import "bootstrap";
